[project]
name = "zhaostephen-vdts"
version = "0.2.3"
description = "A library and CLI for checking and reporting that time series data occurs at regular intervals."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
    "datetime-matcher>=0.2.1",
    "python-dateutil>=2.9.0.post0",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Stephen Zhao", email = "mail@zhaostephen.com" },
]

[project.urls]
Homepage = "https://github.com/stephen-zhao/vdts"
Source = "https://github.com/stephen-zhao/vdts"

[project.scripts]
vdts = "zhaostephen.vdts._internal.cli.main:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["zhaostephen.*"]

[tool.uv]
dev-dependencies = [
    "bump-my-version>=1.2.1",
    "pytest>=8.4.1",
    "uv>=0.8.11",
]

[tool.bumpversion]
current_version = "0.2.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
